# game-price-finder-mini-project

./: .env.example  .gitignore  DEPLOY.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
game_price_finder/: __init__.py  config.py  demo_fixtures.json  errors.py  feedback_store.py  fixture_catalog.py  main.py  models.py  popular_catalog.json
game_price_finder/services/: __init__.py  catalog_merge.py  cheapshark.py  ebay.py  giantbomb.py  igdb.py  isthereanydeal.py  price_history.py  pricing.py  rawg.py  research_links.py  search_hints.py  steam.py
game_price_finder/static/: styles.css
game_price_finder/templates/: base.html  error.html  feedback.html  feedback_admin.html  feedback_thanks.html  game.html  guides.html  index.html  search.html
plans/: 01-game-price-finder-python-uv.plan.md  02-covers-apis-ui-polish.plan.md  03-search-franchise-fuzzy-prices.plan.md  04-more-apis-feedback-sqlite.plan.md  05-zero-login-visitor-experience.plan.md  06-user-manual-plans-index.plan.md  07-expand-catalog-coverage.plan.md  08-buyer-seller-information-ux.plan.md  09-fixture-cover-artwork.plan.md  10-price-history-charts.plan.md  11-history-explorer-ui-and-catalog-covers.plan.md  12-quality-assurance-error-handling.plan.md  README.md
scripts/: cover_fallbacks_override.json  generate_popular_catalog.py  patch_catalog_covers_from_fallbacks.py  popular_catalog_seed.csv  populate_cover_fallbacks_lutris.py
tests/: conftest.py  test_chartjs_filter.py  test_error_pages.py  test_external_api_resilience.py  test_fixture_catalog_loads.py  test_routes_smoke.py
(+1 files in other folders)
