[project]
name = "game-price-finder"
version = "0.1.0"
description = "Compare video game marketplace asks with IGDB-backed search and optional eBay Browse API data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "rapidfuzz>=3.14.5",
    "uvicorn[standard]>=0.47.0",
]
